update: uploaded updated home page photo and hopefully a fix for the slideshow not showing properly

--- a/website/static/stylesheets/home.css
+++ b/website/static/stylesheets/home.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../IMG_4353.JPG');
+    background-image: url('../_DSC6327.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative; /* Ensure the pseudo-element is positioned relative to the body */
